# pyrate

./: .gitignore  LICENSE.txt  README.md  bayes.py  leastsquares.py  massey_data.py  pyproject.toml  ratingbase.py  setup.py  team.py  test_ratings.py
examples/: pyrate_update.py
pyrate/db/: schema.py
pyrate/flaskr/: __init__.py  db.py
pyrate/flaskr/static/: style.css
pyrate/flaskr/templates/: base.html  games.html  home.html  leagues.html  ratings.html  team.html  teams.html
pyrate/rate/: bayes.py  gom.py  leastsquares.py  massey_data.py  mle.py  ratingbase.py  sportsipy_data.py  team.py
pyrate/tests/: test_ratings.py
src/pyrate/flaskr/: __init__.py  db.py
src/pyrate/flaskr/static/: style.css
src/pyrate/flaskr/templates/: base.html  home.html  ratings.html
src/pyrate/rate/: bayes.py  gom.py  leastsquares.py  massey_data.py  mle.py  ratingbase.py  sportsipy_data.py
tests/: test_ratings.py
