[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "pyrate"
version = "0.2.0"
authors = [
  {name = "John McFarland", email = "mcfarljm@gmail.com"},
]
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.2",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "scipy>=1.16.3",
    "sqlalchemy>=2.0.44",
]

[project.optional-dependencies]
sportsipy = [
    "sportsipy>=0.6.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.4",
]

[tool.ruff]
include = ["pyproject.toml", "src/**/*.py", "tests/**/*.py"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

ignore = [
    "B905",  # Todo: use `strict` with zip
]

[tool.ruff.lint.per-file-ignores]
"schema.py" = ["E501"] # Line length
